# rTrace

./: .gitignore  CMakeLists.txt  README.md
src/: canvas.cpp  canvas.h  main.cpp  math.h  tuple.cpp  tuple.h  tuple_test.cpp
src/application/: canvas.cpp  canvas.h  projectile.cpp  projectile.h  render.cpp  render_plane.cpp  run_projectile.cpp
src/display/: canvas.cpp  canvas.h  projectile.cpp
src/image/: ppm_writer.cpp  ppm_writer.h
src/light/: light.cpp  light.h
src/pattern/: checkers_pattern.cpp  checkers_pattern.h  gradient_pattern.cpp  gradient_pattern.h  pattern.cpp  pattern.h  ring_pattern.cpp  ring_pattern.h  stripe_pattern.cpp  stripe_pattern.h
src/primitive/: color.cpp  color.h  intersection.cpp  intersection.h  intersections.cpp  intersections.h  matrix.cpp  matrix.h  matrix_sub.cpp  matrix_sub.h  ray.cpp  ray.h  transformation.cpp  transformation.h  tuple.cpp  tuple.h  vector.cpp  vector.h
src/scene/: camera.cpp  camera.h  prepare_computations.cpp  prepare_computations.h  world.cpp  world.h
src/shape/: material.cpp  material.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.cpp  sphere.h
src/test/: canvas_test.cpp  color_test.cpp  intersection_test.cpp  matrix_test.cpp  ray_test.cpp  sphere_test.cpp  transformation_test.cpp  tuple_test.cpp
src/test/application/: canvas_test.cpp  projectile_test.cpp
src/test/display/: canvas_test.cpp  projectile_test.cpp
src/test/image/: ppm_writer_test.cpp
src/test/light/: light_test.cpp
src/test/pattern/: checkers_pattern_test.cpp  gradient_pattern_test.cpp  ring_pattern_test.cpp  stripe_pattern_test.cpp
src/test/primitive/: color_test.cpp  matrix_test.cpp  ray_test.cpp  transformation_test.cpp  tuple_test.cpp
src/test/scene/: camera_test.cpp  prepare_computations_test.cpp  world_test.cpp
src/test/shape/: material_test.cpp  plane_test.cpp  sphere_test.cpp
